Remove Obsidian word from file

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Sankryptidian",
   "version": "1.0.0",
   "minAppVersion": "0.15.0",
-  "description": "Professional file-level encryption for Obsidian with military-grade AES-256-GCM security.",
+  "description": "Professional file-level encryption with military-grade AES-256-GCM security.",
   "author": "Hailegiorgis Wagaye",
   "authorUrl": "https://github.com/hgiorgis",
   "isDesktopOnly": false,
