--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sankryptidian",
+  "name": "sankrypt",
   "version": "1.0.0",
   "description": "Professional file-level encryption plugin",
   "main": "main.js",
